[project]
name = "sejo-sdk"
version = "0.2.0"
description = "A lightweight Python SDK for building provider-agnostic AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Jose Miguel Mangas", email = "jmiguelmangas@gmail.com" }]
keywords = ["ai", "agents", "sdk", "llm", "openai", "anthropic", "gemini", "deepseek"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jmiguelmangas/SEJO_SDK"
Repository = "https://github.com/jmiguelmangas/SEJO_SDK"
Issues = "https://github.com/jmiguelmangas/SEJO_SDK/issues"

[project.scripts]
sejo = "SEJO_SDK.cli:main"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.34.0"]
gemini = ["google-generativeai>=0.8.0"]
websearch = ["duckduckgo-search>=6.0.0"]
postgres = ["psycopg2-binary>=2.9.0"]
server = ["fastapi>=0.104.0", "uvicorn>=0.24.0"]
all = [
  "anthropic>=0.34.0",
  "duckduckgo-search>=6.0.0",
  "fastapi>=0.104.0",
  "google-generativeai>=0.8.0",
  "openai>=1.0.0",
  "psycopg2-binary>=2.9.0",
  "uvicorn>=0.24.0",
]
dev = [
  "build>=1.0.0",
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "twine>=5.0.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["SEJO_SDK*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
